kubernetes/prod/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivyhub
  namespace: trivyhub
  labels:
    app: trivyhub
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trivyhub
  template:
    metadata:
      labels:
        app: trivyhub
        env: prod
    spec:
      containers:
        - name: trivyhub
          image: ghcr.io/theo-mrn/trivy-dashboard-web:0ebfbd248a10f1b9817466f8de363894721ffba9
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trivyhub
  namespace: trivyhub
spec:
  selector:
    app: trivyhub
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trivyhub
  namespace: trivyhub
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trivyhub.cluster.afflair.app`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: trivyhub
          port: 3000
  tls:
    certResolver: letsencrypt
